# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  käyttöohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/.cache/v/cache/: lastfailed
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/maksukortti/src/tests/.cache/v/cache/: lastfailed
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  database_connection.py  index.py  initialize_database.py  main.py
src/data/: dataset.json
src/entities/: record.py  user.py
src/repositories/: record_repository.py  user_repository.py
src/services/: record.py  user.py  workout.py
src/tests/: database_test.py  dataset_test.py  login_test.py  record_repo_test.py  record_service_test.py  record_test.py  user_repo_test.py  user_service_test.py  user_test.py  workout_service_test.py  workout_test.py
src/ui/: chart.py  gui_builder.py  login.py  menu.py  preliminary.py  tab.py  table.py
src/util/: dataset.py  util.py
