[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Maksim Ilmast <maksim.ilmast@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
dearpygui = "^0.6.365"
invoke = "^1.5.0"
coverage = "^5.5"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
